package eapli.base.agv.domain;public class AGVModel {
}
