package eapli.base.order.domain;

public class Order {
}
