package eapli.base.questionnaire.domain;

public enum Obligatoriness {
    MANDATORY,
    OPTIONAL,
    CONDITION_DEPENDANT
}
