@startuml
hide methods

package User <<rectangle>>{
class User << (E,#FFFFFF) >> << root >>
class Password << (V,#FFFFFF) >> 
class Email<< (V,#FFFFFF) >> 
User --> Password
User --> Email
}

package WarehouseEmployee <<rectangle>>{

class WarehouseEmployee << (E,#FFFFFF) >> <<Root>>

}

class UserType << (I,#AAAAAA) >> << Interface >>



package SalesClerk <<rectangle>>{

class SalesClerk << (E,#FFFFFF) >> <<Root>>

}

package SalesManager <<rectangle>>{

class SalesManager << (E,#FFFFFF) >> <<Root>>

}

package Administrator <<rectangle>>{

class Administrator << (E,#FFFFFF) >> <<Root>>{
}

}

package "Shopping Cart" <<rectangle>>{     

class "Shopping Cart" << (E,#FFFFFF) >> << Root >> 

}

package Customer <<rectangle>>{     

class Customer << (E,#FFFFFF) >> <<Root>>

class "Purchase History" << (E,#FFFFFF) >> 

class Address << (V,#FFFFFF) >> 
class Name << (V,#FFFFFF) >> 
class VatID << (V,#FFFFFF) >> 
class PhoneNumber << (V,#FFFFFF) >> 
class AddressType << (E,#FFFFFF) >> << Enum >>

    Customer "1" --> "1" "Purchase History"

    Customer "1" *-- "0..*" Address
    AddressType "1" <-u- "0..*" Address: billing or delivery

    Customer "1" --> "1" Name
    Customer "1" --> "0..1" LocalDate :dateOfBirth
    Customer "1" --> "1" PhoneNumber
    Customer "1" --> "1" VatID
    
}

package Warehouse <<rectangle>>{

class Warehouse << (V,#FFFFFF) >> <<Root>>

class Aisle << (E,#FFFFFF) >> 

class Rows << (E,#FFFFFF) >> 

class Shelf << (E,#FFFFFF) >> 

class Bin << (E,#FFFFFF) >> 

Warehouse "1" --> "1..*" Aisle 
Aisle "1" --> "1..*" Rows 
Rows "1" --> "1..*" Shelf 
Shelf "1" --> "1..*" Bin 

}



package AGVDock <<rectangle>>{

class AGVDock << (E,#FFFFFF) >> <<Root>> 

class AGV << (E,#FFFFFF) >> 

class AGVState << (V,#FFFFFF) >> 

class AGVModel << (V,#FFFFFF) >> 

AGV "1" --> "1" AGVState 
AGV "0..*" <-- "1" AGVModel 
AGVDock "1" --> "0..1" AGV: houses 
}

package Survey <<rectangle>>{

class Survey << (E,#FFFFFF) >> <<Root>> {
-description
}


class "Alphanumeric code" << (V,#FFFFFF) >>

class "Period of days" << (V,#FFFFFF) >>

class "Rules" << (V,#FFFFFF) >>

    Survey "1" --> "1" "Alphanumeric code"
    Survey "1" --> "1" "Period of days"
    Survey "1" --> "1..*" "Rules"
}

package QuestionType <<rectangle>> {
class QuestionType << (E,#FFFFFF) >> <<Root>>
}

package Section <<rectangle>> {
class Section << (E,#FFFFFF) >> << root >>  {
-description
}
class "Section Id" << (V,#FFFFFF) >> 

class Repeatability << (V,#FFFFFF) >> 

class "Section Title"  << (V,#FFFFFF) >> 

Section "1" --> "1" "Section Id"

Section "1" --> "1" "Section Title"

Section "1" --> "1" Repeatability


}

package Question <<rectangle>>{
class Question << (E,#FFFFFF) >> << root >>{
-question
-instruction
-additionalInfo
}

Question "1" --> "1..*" "Question Id"
}




package Questionnaire <<rectangle>> {

class Questionnaire << (E,#FFFFFF) >> <<Root>> {
-welcomeMessage
-finalMessage
}

class "Questionnaire Id" << (V,#FFFFFF) >> 

class "Questionnaire Title"  << (V,#FFFFFF) >> 



class "Question Id" << (V,#FFFFFF) >> 

Questionnaire "1" --> "1..*" Section

Questionnaire "1" --> "1" "Questionnaire Id"

Questionnaire "1" --> "1" "Questionnaire Title" 

}




package Order <<rectangle>>{

    class Order << (E,#FFFFFF) >> <<Root>>

    class Payment << (V,#AAAAAA) >>

    class Shipment << (V,#AAAAAA) >>

    class "Order State" << (V,#AAAAAA) >>


    Order --> Payment 
    Order --> Shipment 
    Order --> "Order State"
}

package Product <<rectangle>>{

    class Product << (E,#FFFFFF) >> <<Root>>

    class Description<< (V,#AAAAAA) >>
    class Brand << (V,#AAAAAA) >>
    class Photo << (V,#AAAAAA) >>
    class Reference << (V,#AAAAAA) >>
    class Barcode << (V,#AAAAAA) >>
    class "Production Code" << (V,#AAAAAA) >>
    class Price << (V,#AAAAAA) >>

    Product --> Description
    Product --> Brand 
    Product --> Photo 
    Product --> Reference
    Product --> Barcode 
    Product --> "Production Code"
    Product --> Price 

}

package "Product Category" <<Rectangle>>{

    class "Product Category" << (E,#FFFFFF) >> <<Root>>

}




 class Catalog << (E,#FFFFFF) >>

 class "Obligatoriness" << (V,#FFFFFF) >> 


"Product Category" "1" --> "0..*" Product
Catalog  "1" -r-> "0..*" Product
Survey "1" --> "0..*" Questionnaire
Warehouse"1" --> "0..*" AGVDock
Section "1" --> "1..*" Question
Section "1" --> "1" "Obligatoriness"
Question "1" --> "1" "Obligatoriness"
"Shopping Cart" "1" --> "1" Catalog :selects from
User "1" --|> "0..1" Customer
User "1" --|> "0..1" WarehouseEmployee
User "1" --|> "0..1" SalesClerk
User "1" --|> "0..1" Administrator
User "1" --|> "0..1" SalesManager

SalesManager "1" --> "1..*" Survey :can carry out
SalesManager "1" --> "1..*" "Product Category" :manage information related to
SalesManager "1" --> "1..*" Catalog :manage information related to
SalesClerk "1" --> "1..*" "Product Category" :manage information related to
SalesClerk "1" --> "1..*" Catalog :manage information related to
SalesClerk"1" --> "1..*" "Customer" :can register
Customer "1" --> "0..*" Questionnaire : reply to
Customer "1" -r-> "0..*" Order: create or follow status
Customer "1" --> "1" "Shopping Cart" : has associated to him
SalesClerk "1" --> "1..*" "Order" :can register
SalesManager "1" --> "1..*" "Customer" :can register
WarehouseEmployee "1" --> "1..*" "Warehouse" :works
Administrator "1" --> "1..*" "UserType" :manages
UserType"1" --> "1..*" User :caracterizes the permissions of
"Shopping Cart" "1" --> "1..*" Order: origines after Payment
Warehouse "1" --> "0..*" Product: stores
Order "*" --> "1" Warehouse: when state is "to be prepared"
QuestionType "1" --> "0..*" Question
@enduml